# policy-chat-rag

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
api/app/: dependencies.py  main.py  prompts.py  schemas.py
api/app/config/: logging.py  logging_conf.json  settings.py
api/app/scripts/: ingest.py
api/app/services/: agent.py  vector_store.py
api/config/: settings.py
api/services/: vector_store.py
src/: .env.example  dependencies.py  main.py  prompts.py  pyproject.toml  schemas.py
src/config/: logging_conf.json  settings.py
src/scripts/: ingest.py
src/services/: agent.py  llm.py  rag.py  vector_store.py
web/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/chat/[threadId]/: page.tsx
web/app/history/: page.tsx
web/components/: chat-layout.tsx  conversation-sidebar.tsx  icons.tsx  message-input.tsx  message-list.tsx  mobile-nav-sheet.tsx  sources-sheet.tsx  streaming-text.tsx  typewriter-text.tsx
web/components/ui/: tooltip.tsx
web/lib/: api.ts  chat-context.tsx  storage.ts  theme-context.tsx  types.ts
