[project]
name = "policy-chat-api"
version = "0.1.0"
description = "RAG chatbot API for policy insights"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "boto3>=1.42.28",
    "chromadb>=1.4.1",
    "fastapi[standard]>=0.128.0",
    "langchain>=1.2.4",
    "langchain-aws>=1.2.1",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.6",
    "langgraph-checkpoint-postgres>=3.0.3",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "scipy>=1.17.0",
]
